# MRI-Simulator-cpp

./: CMakeLists.txt  img_mat.txt  img_mat_0.txt  img_mat_1.txt  img_mat_2.txt  img_mat_3.txt  img_mat_4.txt  img_mat_5.txt  img_mat_6.txt  img_mat_7.txt  mat.txt  mat_data.txt  mat_save.sh  plot.py  readme.md  real_mat.txt  real_mat_0.txt  real_mat_1.txt  real_mat_2.txt  real_mat_3.txt  real_mat_4.txt  real_mat_5.txt  real_mat_6.txt  real_mat_7.txt  test.sh  test.yaml
.cache/clangd/index/: Bloch.cpp.10322CE83B56C9C3.idx  Bloch.cpp.6C1D156C6152BB49.idx  Bloch.h.D16E3C3B0275C416.idx  Bloch.h.D49CAD2C835AEB78.idx  SeqLoader.cpp.932C68C2DC651738.idx  SeqLoader.cpp.E99FFB5729DB3B4A.idx  SeqLoader.h.13439ECD3B937C5D.idx  SeqLoader.h.B8D0CBBAB1161750.idx  encoding.cpp.4581B4390BCBDB32.idx  encoding.cpp.73BB1356F9D42FE8.idx  encoding.h.50E4C6760BA4334F.idx  encoding.h.7B38FFC49DF553EE.idx  flow.cpp.D828C4854F25A474.idx  flow.cpp.F0B4D6B6CAD28A41.idx  flow.h.325E12FC0CFCBB4E.idx  flow.h.8215D6F8F09557F5.idx  info.cpp.73B6B608ABF214FC.idx  info.cpp.7F0A3CE62932D534.idx  info.h.76FD938581D41C21.idx  info.h.C52F0F1342F9FDF8.idx  main.cpp.A8421C04C9B02D5E.idx  main.cpp.F3C1CE71D5651C4B.idx  tqdm.h.A8215AD530C9CFA0.idx
include/: tqdm.h
python/: data_analysis.py  image.py  main_info.py  plot.ipynb
result/flow_128/: img_mat_0.txt  img_mat_1.txt  img_mat_2.txt  img_mat_3.txt  img_mat_4.txt  img_mat_5.txt  img_mat_6.txt  img_mat_7.txt  real_mat_0.txt  real_mat_1.txt  real_mat_2.txt  real_mat_3.txt  real_mat_4.txt  real_mat_5.txt  real_mat_6.txt  real_mat_7.txt
result/flow_3_128/: img_mat_0.txt  img_mat_1.txt  img_mat_2.txt  img_mat_3.txt  img_mat_4.txt  img_mat_5.txt  img_mat_6.txt  img_mat_7.txt  real_mat_0.txt  real_mat_1.txt  real_mat_2.txt  real_mat_3.txt  real_mat_4.txt  real_mat_5.txt  real_mat_6.txt  real_mat_7.txt
result/static_128/: img_mat_0.txt  img_mat_1.txt  img_mat_2.txt  img_mat_3.txt  img_mat_4.txt  img_mat_5.txt  img_mat_6.txt  img_mat_7.txt  real_mat_0.txt  real_mat_1.txt  real_mat_2.txt  real_mat_3.txt  real_mat_4.txt  real_mat_5.txt  real_mat_6.txt  real_mat_7.txt
seq_generate/: bssfp_seq_generate.py  main_info.py
sequence/: bSSFP_TR2o8.yaml  molliseq.yaml
src/: CMakeLists.txt  main.cpp
src/Bloch/: Bloch.cpp  Bloch.h  CMakeLists.txt
src/SeqLoader/: CMakeLists.txt  SeqLoader.cpp  SeqLoader.h
src/encoding/: CMakeLists.txt  encoding.cpp  encoding.h
src/flow/: CMakeLists.txt  flow.cpp  flow.h
src/info/: CMakeLists.txt  info.cpp  info.h
