PROJECT (bSSFPSeq)
aux_source_directory(. DIR_SRCS)
# include_directories($(PROJECT_SOURCE_DIR)/include)

add_subdirectory(Bloch)
add_subdirectory(info)
add_subdirectory(SeqLoader)
add_subdirectory(encoding)
add_subdirectory(flow)

add_executable(bSSFPSeq main.cpp)
target_link_libraries(bSSFPSeq Bloch)
target_link_libraries(bSSFPSeq SeqLoader)
target_link_libraries(bSSFPSeq info)
target_link_libraries(bSSFPSeq encoding)
target_link_libraries(bSSFPSeq flow)
# target_link_libraries(bSSFPSeq OpenCV)
# target_link_libraries(bSSFPSeq ${OpenCV_LIBS})
# include_directories(${OpenCV_INCLUDE_DIRS})
# target_link_libraries(bSSFPSeq ${OpenCV_LIBS})

# add_definitions(-DOPENCV_DISABLE_EIGEN_TENSOR_SUPPORT)